<?xml version="1.0" encoding="utf-8"?>


<resources>

    <string name="hint_line">Line:</string>
    <string name="hint_line_number" translatable="false">0</string>

    <string name="action_close">Close</string>
    <string name="action_close_others">Close Others</string>
    <string name="action_close_all">Close All</string>
    <string name="action_insert">Insert</string>
    <string name="action_new">New</string>
    <string name="action_open">Open</string>
    <string name="action_save_as">Save As</string>
    <string name="action_select_line">Select Line</string>
    <string name="action_delete_line">Delete Line</string>
    <string name="action_duplicate_line">Duplicate Line</string>
    <string name="action_regex">Regex</string>
    <string name="action_match_case">Match Case</string>
    <string name="action_words_only">Words Only</string>
    <string name="action_find">Find</string>
    <string name="action_close_find">Close Find</string>
    <string name="action_replace">Replace</string>
    <string name="action_close_replace">Close Replace</string>
    <string name="action_goto_line">Go to Line</string>
    <string name="action_go_to">Go to</string>
    <string name="action_force_syntax">Force Syntax</string>
    <string name="action_insert_color">Insert Color</string>
    <string name="action_settings">Settings</string>
    <string name="action_tools">Tools</string>

    <string name="dialog_title_goto_line">Go to Line…</string>
    <string name="dialog_title_color_picker">Color Picker</string>
    <string name="dialog_title_force_syntax">Syntax Highlighting</string>

    <string name="dialog_message_close_tab">Are you sure you want to close this file? All unsaved changes will be discarded</string>

    <string name="message_no_open_files">No open files</string>
    <string name="message_file_not_found">File not found</string>
    <string name="message_out_of_memory">Out of memory</string>
    <string name="message_saved">Saved</string>
    <string name="message_nothing_to_cut">Nothing to cut</string>
    <string name="message_nothing_to_copy">Nothing to copy</string>
    <string name="message_nothing_to_paste">Nothing to paste</string>
    <string name="message_line_not_exists">Line does not exists</string>
    <string name="message_no_errors_detected">No syntax errors detected</string>

</resources>