<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_new"
        android:title="@string/action_new"
        android:icon="@drawable/ic_plus"
        app:iconTint="?colorOnSurfaceVariant" />
    <item
        android:id="@+id/action_open"
        android:title="@string/action_open"
        android:icon="@drawable/ic_folder_open"
        app:iconTint="?colorOnSurfaceVariant" />
    <item
        android:id="@+id/action_save"
        android:title="@string/common_save"
        android:icon="@drawable/ic_save"
        app:iconTint="?colorOnSurfaceVariant" />
    <item
        android:id="@+id/action_save_as"
        android:title="@string/action_save_as"
        android:icon="@drawable/ic_save_as"
        app:iconTint="?colorOnSurfaceVariant" />
    <item
        android:id="@+id/action_close"
        android:title="@string/action_close"
        android:icon="@drawable/ic_close"
        app:iconTint="?colorOnSurfaceVariant" />
</menu>