<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/cut_copy_paste">
        <item
            android:id="@+id/action_cut"
            android:title="@android:string/cut"
            android:icon="@drawable/ic_cut"
            app:iconTint="?colorOnSurfaceVariant" />
        <item
            android:id="@+id/action_copy"
            android:title="@android:string/copy"
            android:icon="@drawable/ic_copy"
            app:iconTint="?colorOnSurfaceVariant" />
        <item
            android:id="@+id/action_paste"
            android:title="@android:string/paste"
            android:icon="@drawable/ic_paste"
            app:iconTint="?colorOnSurfaceVariant" />
    </group>
    <item
        android:id="@+id/action_select_all"
        android:title="@android:string/selectAll"
        android:icon="@drawable/ic_select_all"
        app:iconTint="?colorOnSurfaceVariant" />
    <item
        android:id="@+id/action_select_line"
        android:title="@string/action_select_line"
        android:icon="@drawable/ic_line_select"
        app:iconTint="?colorOnSurfaceVariant" />
    <item
        android:id="@+id/action_delete_line"
        android:title="@string/action_delete_line"
        android:icon="@drawable/ic_minus"
        app:iconTint="?colorOnSurfaceVariant" />
    <item
        android:id="@+id/action_duplicate_line"
        android:title="@string/action_duplicate_line"
        android:icon="@drawable/ic_line_duplicate"
        app:iconTint="?colorOnSurfaceVariant" />
</menu>